# Computer-of-Things

./: README.md
client-wasm/: ComputerOfThings.mjs  ComputerOfThings.wasm  Makefile  Makefile1  Makefile2  README.md  Workpackage.data  driver
client-wasm/examples/: Makefile  main.cpp
client-wasm/include/: ComputerOfThings.h  common_generated.h
client-wasm/src/: ComputerOfThings.cpp  ComputerOfThings.h  common_generated.h  main.cpp  request_generated.h  response_generated.h  workpackage_generated.h
client-webapp/: README.md  package-lock.json  package.json
sample-flattbuffer-code/: main  student.fbs  student_data.data
schema/: .gitignore  README.md  common.fbs  compile.sh  request.fbs  response.fbs  workpackage.fbs
webserver/: README.md
websocket-server/: .gitignore  README.md  pyproject.toml
websocket-server/src/computer_of_things/server/: __init__.py  __main__.py  utils.py
websocket-server/src/computer_of_things/workpackage/: Operation.py  OperationRequest.py  OperationResponse.py  WorkpackageRequest.py  WorkpackageResponse.py
websocket-server/src/computer_of_things/workpackage/common/: Matrix.py  Matrix2D.py  Matrix3D.py  MatrixND.py
websocket-server/src/computer_of_things/workpackage/request/: BivariateMatrixRequest.py  BivariateScalarRequest.py  Request.py
websocket-server/src/computer_of_things/workpackage/response/: MatrixResponse.py  Reponse.py  ScalarResponse.py
websocket-server/src/cothings/websocket/server/: __main__.py
websocket-server/tests/: test_computer_of_things.py  test_workpackage_schema.py
(+25 files in other folders)
