[tool.poetry]
name = "computer_of_things"
version = "0.1.0"
description = ""
authors = ["Malan Ruppert <malan.ruppert@vastech.co.za>"]

[tool.poetry.dependencies]
python = "^3.8"
websockets = "^10.3"
flatbuffers = "^2.0"
numpy = "^1.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"